[package]
name = "session-manager"
version = "0.1.0"
authors = ["Nicholas Sim <nsim@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
libc = "0.2"
nix = "0.17"
signal-hook = "0.1"
termion = "1.5"
