[package]
name = "session-manager"
version = "0.1.0"
authors = ["Nicholas Sim <nsim@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
libc = "0.2"
log = "*"
log4rs = { version = "*", default-features = false, features = ["file_appender"] }
nix = "0.17"
signal-hook = "0.1"
termion = "1.5"
vte = "0.8"

[dev-dependencies]
tempfile = "3"
