[package]
name = "session-manager"
version = "0.1.0"
authors = ["Nicholas Sim <nsim@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
futures-timer = "3"
libc = "0.2"
log = "*"
log4rs = { version = "*", default-features = false, features = ["file_appender"] }
nix = "0.20"
signal-hook = "0.1"
termion = "1.5"
thiserror = "1"

[dependencies.vte]
git = "https://github.com/nw0/vte"
branch = "move-ansi"
default-features = false
features = ["ansi"]

[dev-dependencies]
tempfile = "3"
